--- a/css/main.scss
+++ b/css/main.scss
@@ -1,53 +1,43 @@
----
-# Only the main Sass file needs front matter (the dashes are enough)
----
-@charset "utf-8";
+body {
+	height: 100%;
+	margin: 0;
+	text-align: center;
+	width: 100%;
+}
 
+h1 {
+  color: rgb(46,105,163);
+	font-size: 32px;
+  font-family: palatino, 'Palatino Linotype',serif;
+}
 
-
-// Our variables
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$base-font-size:   16px;
-$base-font-weight: 400;
-$small-font-size:  $base-font-size * 0.875;
-$base-line-height: 1.5;
-
-$spacing-unit:     30px;
-
-$text-color:       #111;
-$background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
-
-$grey-color:       #828282;
-$grey-color-light: lighten($grey-color, 40%);
-$grey-color-dark:  darken($grey-color, 25%);
-
-// Width of the content area
-$content-width:    800px;
-
-$on-palm:          600px;
-$on-laptop:        800px;
-
-
-
-// Use media queries like this:
-// @include media-query($on-palm) {
-//     .wrapper {
-//         padding-right: $spacing-unit / 2;
-//         padding-left: $spacing-unit / 2;
-//     }
-// }
-@mixin media-query($device) {
-    @media screen and (max-width: $device) {
-        @content;
-    }
+h2 {
+	font-size: 56px;
 }
 
 
+.hero {
+   font-family: 'Trebuchet MS', Helvetica, sans-serif;
+  color: #ffffff;
+  background-image: url("https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-2/bg.jpg");
+  background-size: cover;
+	padding: 250px 0;
+	margin: 30px;
+}
 
-// Import partials from `sass_dir` (defaults to `_sass`)
-@import
-        "base",
-        "layout",
-        "syntax-highlighting"
-;
+
+p {
+font-size: 2rem;
+}
+
+.hero a {
+	color: #00FFAA;
+	font-size: 1.25rem;
+	text-decoration: none;
+}
+
+#footer {
+  font-size: 0.75rem;
+}
+
+
