--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -200,6 +200,10 @@ section.success {
 #portfolio .portfolio-item {
   margin: 0 0 15px;
   right: 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 }
 #portfolio .portfolio-item .portfolio-link {
   display: block;
