--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -200,9 +200,7 @@ section.success {
 #portfolio .portfolio-item {
   margin: 0 0 15px;
   right: 0;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  display:inline-block;
 }
 }
 #portfolio .portfolio-item .portfolio-link {
